deixando textos dos graficos mais visiveis

--- a/site/public/dashboard/dashboardGerente.html
+++ b/site/public/dashboard/dashboardGerente.html
@@ -202,7 +202,7 @@
                                             <div class="h5 mb-0 font-weight-bold text-gray-800" id="idQtdAlertasCpu">0</div>
                                         </div>
                                         <div class="col-auto">
-                                            <i class="fas fa-microchip fa-2x text-gray-300"></i>
+                                            <i class="fas fa-microchip fa-2x text-black-300"></i>
                                         </div>
                                     </div>
                                 </div>
@@ -220,7 +220,7 @@
                                             <div class="h5 mb-0 font-weight-bold text-gray-800" id="idQtdAlertasMemoria">0</div>
                                         </div>
                                         <div class="col-auto">
-                                            <i class="fas fa-memory fa-2x text-gray-300"></i>
+                                            <i class="fas fa-memory fa-2x text-black-300"></i>
                                         </div>
                                     </div>
                                 </div>
@@ -243,7 +243,7 @@
                                             </div>
                                         </div>
                                         <div class="col-auto">
-                                            <i class="fas fa-compact-disc fa-2x text-gray-300"></i>
+                                            <i class="fas fa-compact-disc fa-2x text-black-300"></i>
                                         </div>
                                     </div>
                                 </div>
@@ -261,7 +261,7 @@
                                             <div class="h5 mb-0 font-weight-bold text-gray-800" id="idQtdAlertasTotal">0</div>
                                         </div>
                                         <div class="col-auto">
-                                            <i class="fas fa-chart-pie fa-2x text-gray-300"></i>
+                                            <i class="fas fa-chart-pie fa-2x text-black-300"></i>
                                         </div>
                                     </div>
                                 </div>
@@ -313,7 +313,7 @@
                                 <!-- Card Header - Dropdown -->
                                 <div
                                     class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
-                                    <h6 class="m-0 font-weight-bold text-primary">Alertas por Dia da Semana</h6>
+                                    <h6 class="m-0 font-weight-bold text-primary">Alertas por Setor</h6>
                                     <!-- <div class="dropdown no-arrow">
                                         <a class="dropdown-toggle" href="#" role="button" id="dropdownMenuLink"
                                             data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -354,13 +354,13 @@
                                         <canvas id="graficoTipoProblemas"></canvas>
                                     </div>
                                     <div class="mt-4 text-center small">
-                                        <span class="mr-2">
+                                        <span class="mr-2" style="color: black; font-weight: bolder; font-size: 15px;">
                                             <i class="fas fa-circle text-emergency"></i> Emergência
                                         </span>
-                                        <span class="mr-2">
+                                        <span class="mr-2" style="color: black; font-weight: bolder; font-size: 15px;">
                                             <i class="fas fa-circle text-hazard"></i> Perigo
                                         </span>
-                                        <span class="mr-2">
+                                        <span class="mr-2" style="color: black; font-weight: bolder; font-size: 15px;">
                                             <i class="fas fa-circle text-prevention"></i> Prevenção
                                         </span>
                                     </div>
