--- a/site/public/dashboard/dashboardAnalista.html
+++ b/site/public/dashboard/dashboardAnalista.html
@@ -10,7 +10,7 @@
     <meta name="description" content="" />
     <meta name="author" content="" />
 
-    <title>Dashboard</title>
+    <title>Dashboard Analista</title>
 
     <link
       rel="shortcut icon"
@@ -101,22 +101,10 @@
             data-parent="#accordionSidebar"
           >
             <div class="bg-white py-2 collapse-inner rounded">
-              <h6 class="collapse-header">Opções:</h6>
-              <a class="collapse-item" href="servidores.html">Cadastrar</a>
               <a
                 class="collapse-item"
                 href="servidores.html#div_consulta_servidor"
                 >Consultar</a
-              >
-              <a
-                class="collapse-item"
-                href="servidores.html#div_atualizacao_servidor"
-                >Atualizar</a
-              >
-              <a
-                class="collapse-item"
-                href="servidores.html#div_exclusao_servidor"
-                >Deletar</a
               >
             </div>
           </div>
@@ -151,69 +139,6 @@
             <!-- Topbar Navbar -->
             <ul class="navbar-nav ml-auto">
               <!-- Nav Item - Alerts -->
-              <li class="nav-item dropdown no-arrow mx-1">
-                <a
-                  class="nav-link dropdown-toggle"
-                  href="#"
-                  id="alertsDropdown"
-                  role="button"
-                  data-toggle="dropdown"
-                  aria-haspopup="true"
-                  aria-expanded="false"
-                >
-                  <i class="fas fa-bell fa-fw"></i>
-                  <!-- Counter - Alerts -->
-                  <span class="badge badge-danger badge-counter">3+</span>
-                </a>
-                <!-- Dropdown - Alerts -->
-                <div
-                  class="dropdown-list dropdown-menu dropdown-menu-right shadow animated--grow-in"
-                  aria-labelledby="alertsDropdown"
-                >
-                  <h6 class="dropdown-header">Alertas</h6>
-                  <a class="dropdown-item d-flex align-items-center" href="#">
-                    <div class="mr-3">
-                      <div class="icon-circle bg-primary">
-                        <i class="fas fa-file-alt text-white"></i>
-                      </div>
-                    </div>
-                    <div>
-                      <div class="small text-gray-500">December 12, 2019</div>
-                      <span class="font-weight-bold"
-                        >A new monthly report is ready to download!</span
-                      >
-                    </div>
-                  </a>
-                  <a class="dropdown-item d-flex align-items-center" href="#">
-                    <div class="mr-3">
-                      <div class="icon-circle bg-success">
-                        <i class="fas fa-donate text-white"></i>
-                      </div>
-                    </div>
-                    <div>
-                      <div class="small text-gray-500">December 7, 2019</div>
-                      $290.29 has been deposited into your account!
-                    </div>
-                  </a>
-                  <a class="dropdown-item d-flex align-items-center" href="#">
-                    <div class="mr-3">
-                      <div class="icon-circle bg-warning">
-                        <i class="fas fa-exclamation-triangle text-white"></i>
-                      </div>
-                    </div>
-                    <div>
-                      <div class="small text-gray-500">December 2, 2019</div>
-                      Spending Alert: We've noticed unusually high spending for
-                      your account.
-                    </div>
-                  </a>
-                  <a
-                    class="dropdown-item text-center small text-gray-500"
-                    href="#"
-                    >Show All Alerts</a
-                  >
-                </div>
-              </li>
 
               <div class="topbar-divider d-none d-sm-block"></div>
 
@@ -262,7 +187,7 @@
           <!-- Begin Page Content -->
           <div class="container-fluid">
             <!-- Page Heading -->
-            <!-- <div
+            <div
               class="header-dash align-items-center justify-content-between mb-4"
             >
               <h1 class="h3 mb-0 text-gray-800">Servidor:</h1>
@@ -270,12 +195,17 @@
                 <option value="01">F34AD</option>
                 <option value="02">A27FF</option>
                 <option value="03">95OAA</option>
-              </select> -->
-            <!--
+              </select>
+              <select name="server" id="serverSelect" class="select">
+                <option value="01">F34AD</option>
+                <option value="02">A27FF</option>
+                <option value="03">95OAA</option>
+              </select>
+              <!--
                             <a href="#" class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm"><i
                                 class="fas fa-download fa-sm text-white-50"></i> Generate Report</a>
                             -->
-            <!-- </div> -->
+            </div>
 
             <!-- Content Row -->
             <div class="row">
@@ -286,7 +216,7 @@
                     <div class="row no-gutters align-items-center">
                       <div class="col mr-2">
                         <div
-                          class="text-xs font-weight-bold text-primary text-uppercase mb-1 text-danger"
+                          class="text-xs font-weight-bold text-primary text-uppercase mb-1"
                         >
                           Servidores críticos
                         </div>
@@ -304,12 +234,12 @@
 
               <!-- Earnings (Monthly) Card Example -->
               <div class="col-xl-3 col-md-6 mb-4">
-                <div class="card border-left-warning shadow h-0 py-2">
+                <div class="card border-left-primary shadow h-0 py-2">
                   <div class="card-body">
                     <div class="row no-gutters align-items-center">
                       <div class="col mr-2">
                         <div
-                          class="text-xs font-weight-bold text-success text-uppercase mb-1 text-warning"
+                          class="text-xs font-weight-bold text-primary text-uppercase mb-1"
                         >
                           Servidores em alerta
                         </div>
@@ -327,12 +257,12 @@
 
               <!-- Earnings (Monthly) Card Example -->
               <div class="col-xl-3 col-md-6 mb-4">
-                <div class="card border-left-info shadow h-100 py-2">
+                <div class="card border-left-primary shadow h-100 py-2">
                   <div class="card-body">
                     <div class="row no-gutters align-items-center">
                       <div class="col mr-2">
                         <div
-                          class="text-xs font-weight-bold text-info text-uppercase mb-1"
+                          class="text-xs font-weight-bold text-primary text-uppercase mb-1"
                         >
                           Porcentagem de erro
                         </div>
@@ -344,18 +274,7 @@
                               1TB
                             </div>
                           </div>
-                          <div class="col">
-                            <div class="progress progress-sm mr-2">
-                              <div
-                                class="progress-bar bg-info"
-                                role="progressbar"
-                                style="width: 25%"
-                                aria-valuenow="50"
-                                aria-valuemin="0"
-                                aria-valuemax="100"
-                              ></div>
-                            </div>
-                          </div>
+                          <div class="col"></div>
                         </div>
                       </div>
                       <div class="col-auto">
@@ -368,12 +287,12 @@
 
               <!-- Pending Requests Card Example -->
               <div class="col-xl-3 col-md-6 mb-4">
-                <div class="card border-left-warning shadow h-100 py-2">
+                <div class="card border-left-primary shadow h-100 py-2">
                   <div class="card-body">
                     <div class="row no-gutters align-items-center">
                       <div class="col mr-2">
                         <div
-                          class="text-xs font-weight-bold text-warning text-uppercase mb-1"
+                          class="text-xs font-weight-bold text-primary text-uppercase mb-1"
                         >
                           Chamados abertos
                         </div>
@@ -400,7 +319,7 @@
                   <div
                     class="card-header py-3 d-flex flex-row align-items-center justify-content-between"
                   >
-                    <h6 class="m-0 font-weight-bold text-primary text-normal">
+                    <h6 class="m-0 font-weight-bold text-primary">
                       Incidentes do dia
                     </h6>
                     <div class="dropdown no-arrow">
@@ -495,6 +414,50 @@
                       </span>
                     </div>
                   </div>
+                </div>
+              </div>
+            </div>
+
+            <!--Consultar Servidores-->
+            <div class="card shadow mb-4" id="div_consulta_servidor">
+              <div class="card-header py-3">
+                <h6 class="m-0 font-weight-bold text-primary">
+                  Monitoramento ao vivo
+                </h6>
+              </div>
+              <div class="card-body">
+                <div class="table-responsive">
+                  <table
+                    class="table table-bordered"
+                    id="dataTable"
+                    width="100%"
+                    cellspacing="0"
+                  >
+                    <thead>
+                      <tr>
+                        <th class="tableHeader">Servidor</th>
+                        <th class="tableHeader">Hora do Registro</th>
+                        <th class="tableHeader">Frequência CPU (GHz)</th>
+                        <th class="tableHeader">Uso CPU (%)</th>
+                        <th class="tableHeader">Uso Disco (%)</th>
+                        <th class="tableHeader">Uso memória (%)</th>
+                        <th class="tableHeader">Bytes enviados (Gb)</th>
+                        <th class="tableHeader">Bytes recebidos (Gb)</th>
+                      </tr>
+                    </thead>
+                    <tbody id="exibir_consulta_servidor">
+                      <tr>
+                        <td class="tableContent"></td>
+                        <td class="tableContent"></td>
+                        <td class="tableContent"></td>
+                        <td class="tableContent"></td>
+                        <td class="tableContent"></td>
+                        <td class="tableContent"></td>
+                        <td class="tableContent"></td>
+                        <td class="tableContent"></td>
+                      </tr>
+                    </tbody>
+                  </table>
                 </div>
               </div>
             </div>
