--- a/site/public/dashboard/dashboardGerente.html
+++ b/site/public/dashboard/dashboardGerente.html
@@ -217,7 +217,7 @@
 
                         <!-- Earnings (Monthly) Card Example -->
                         <div class="col-xl-3 col-md-6 mb-4">
-                            <div class="card border-left-primary shadow h-100 py-2 pointer" onclick="filtrarPorComponente(1)" id="cardCpu">
+                            <div class="card border-left-info shadow h-100 py-2 pointer" onclick="filtrarPorComponente(1)" id="cardCpu">
                                 <div class="card-body">
                                     <div class="row no-gutters align-items-center">
                                         <div class="col mr-2">
@@ -253,7 +253,7 @@
 
                         <!-- Earnings (Monthly) Card Example -->
                         <div class="col-xl-3 col-md-6 mb-4">
-                            <div class="card border-left-primary shadow h-100 py-2 pointer" onclick="filtrarPorComponente(3)" id="cardDisco">
+                            <div class="card border-left-info shadow h-100 py-2 pointer" onclick="filtrarPorComponente(3)" id="cardDisco">
                                 <div class="card-body">
                                     <div class="row no-gutters align-items-center">
                                         <div class="col mr-2">
