Criação da página consulta do servidor

--- a/site/public/dashboard/dashboardAnalista.html
+++ b/site/public/dashboard/dashboardAnalista.html
@@ -104,6 +104,13 @@
               <a
                 class="collapse-item"
                 href="servidores.html#div_consulta_servidor"
+                >Apagar (dps)</a
+              >
+            </div>
+            <div class="bg-white py-2 collapse-inner rounded">
+              <a
+                class="collapse-item"
+                href="consulta.html"
                 >Consultar</a
               >
             </div>
